# FluidML

./: .gitignore  Cambium_Tutorial_Regression_Iris_Digits.ipynb  FluidML_Tutorial_Regression_Iris_Digits.ipynb  LICENSE  MANIFEST.in  README.md  cambium_cli.py  fluidml_cli.py  logos_cli.py  pyproject.toml  requirements.txt  rf_cli.py  rf_framework.py
Doc/: Rf Framework Cli Doc (1).docx  Rf Framework Cli Doc (2).docx  Rf Framework Cli Docs.docx  installation_guide.md  rf_framework_readme.md  verification_script (1).py
Doc/Doc2/: Qwen__20251006_g294n3not.txt  RF_Framework_Documentation.md  Rf Framework Cli Doc.docx  rf_framework_cli_doc (1).md  rf_framework_cli_doc (2).md  rf_framework_cli_doc.md  rf_framework_cli_docs.md
cambium/: __init__.py  cli.py  codegen.py  config.py  data.py  framework.py  logos.py  training.py
cambium/templates/firmware/: rf_trees_bram.h.j2  rfr_common.h.j2
cambium/templates/test/: X_test.h.j2  rfr_tb.cpp.j2
fluidml/: __init__.py  cli.py  codegen.py  config.py  data.py  framework.py  logos.py  training.py
templates/firmware/: bitcast_utils.h.j2  model_predict.cpp.j2  myproj_axi.cpp.j2  myproj_core.cpp.j2  rf_trees_array.h.j2  rf_trees_bram.cpp.j2  rf_trees_default.cpp.j2  rf_trees_default.h.j2  rfr_common.h.j2  scaler_constants.h.j2
templates/test/: rfr_tb.cpp.j2
