[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambium-hls"
version = "1.1.0"
description = "Cambium trains Random Forest models and exports HLS-ready FPGA inference code for Vivado/Vitis."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mohammed Mshragi" }]
keywords = ["machine-learning", "fpga", "hls", "vivado", "vitis", "random-forest"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "Jinja2>=3.1",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/mshragiM/Cambium"
Repository = "https://github.com/mshragiM/Cambium"
Issues = "https://github.com/mshragiM/Cambium/issues"

[project.scripts]
cambium = "cambium.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["cambium_cli"]

[tool.setuptools.packages.find]
include = ["cambium*"]

[tool.setuptools.package-data]
cambium = ["templates/firmware/*.j2", "templates/test/*.j2"]
